// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<withPropsOnChange(Navigation)>
  <NavigationLink
    to="/admin/moderate/reported"
  >
    <ForwardRef(forwardRef)>
      flag
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-reported"
    >
      <span>
        Reported
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/pending"
  >
    <ForwardRef(forwardRef)>
      access_time
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-pending"
    >
      <span>
        Pending
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/unmoderated"
  >
    <ForwardRef(forwardRef)>
      forum
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-unmoderated"
    >
      <span>
        Unmoderated
      </span>
    </Localized>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/rejected"
  >
    <ForwardRef(forwardRef)>
      cancel
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-rejected"
    >
      <span>
        Rejected
      </span>
    </Localized>
  </NavigationLink>
</withPropsOnChange(Navigation)>
`;

exports[`renders correctly with counts 1`] = `
<withPropsOnChange(Navigation)>
  <NavigationLink
    to="/admin/moderate/reported"
  >
    <ForwardRef(forwardRef)>
      flag
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-reported"
    >
      <span>
        Reported
      </span>
    </Localized>
    <withPropsOnChange(Counter)
      data-testid="moderate-navigation-reported-count"
    >
      4
    </withPropsOnChange(Counter)>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/pending"
  >
    <ForwardRef(forwardRef)>
      access_time
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-pending"
    >
      <span>
        Pending
      </span>
    </Localized>
    <withPropsOnChange(Counter)
      data-testid="moderate-navigation-pending-count"
    >
      0
    </withPropsOnChange(Counter)>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/unmoderated"
  >
    <ForwardRef(forwardRef)>
      forum
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-unmoderated"
    >
      <span>
        Unmoderated
      </span>
    </Localized>
    <withPropsOnChange(Counter)
      data-testid="moderate-navigation-unmoderated-count"
    >
      3
    </withPropsOnChange(Counter)>
  </NavigationLink>
  <NavigationLink
    to="/admin/moderate/rejected"
  >
    <ForwardRef(forwardRef)>
      cancel
    </ForwardRef(forwardRef)>
    <Localized
      id="moderate-navigation-rejected"
    >
      <span>
        Rejected
      </span>
    </Localized>
  </NavigationLink>
</withPropsOnChange(Navigation)>
`;
